Code cleanup. AsyncPlayerChatListener changed permissions. Added private message formatting.